# AcuteResp-AgentTracker

./: .env.example  .gitignore  LICENSE  README.md  databricks.yml  main.py  pyproject.toml
conf/: env_vars.toml  template_report.html
reports/: SRAG_report_2025-10-14.html  SRAG_report_2025-10-15.html  SRAG_report_2025-10-16.html  SRAG_report_2025-12-16.html  SRAG_report_2025-12-17.html  SRAG_report_2025-12-18.html  SRAG_report_2026-01-13.html
resources/: acute_resp_agent_job.job.yml  acute_resp_agent_job.pipeline.yml  acute_resp_agent_job.yml  project_setup_job.job.yml
src/: eda.ipynb  feature_engineering.py.ipynb
src/agent_config/: callback_handler.py  callback_handler.py.ipynb  callback_handler.py.py  main_prompt.py.ipynb  prompt.py
src/agents/: agent.py  agent.py.ipynb  agent_environment.py  agent_environment.py.ipynb  agent_nb.py  ai_chat.py  daily_report_generator.py  daily_report_runner.py  deploy_agent.py  orquestrator_agent.py.ipynb  structured-data-for-rag.py
src/elt/: (Clone) extract_data.py.ipynb  extract_refreshing_data.py  extract_refreshing_data.py.ipynb  extract_static_data.py  extract_static_data.py.ipynb  feature_engineering.py  feature_engineering.py.ipynb
src/tools/: database_searcher.py  database_searcher.py.ipynb  database_searcher_nb.py  dictionary_reader.py.ipynb  generate_metrics.py  generate_metrics.py.ipynb  metric_calculator.py  metric_calculator.py.ipynb  metric_calculator_nb.py  metric_calculator_old.py.ipynb  metrics_calculator.py  report_assembler.py  report_assembler.py.ipynb  report_assembler_nb.py  report_finder.ipynb  report_finder.py  report_finder.py.ipynb  report_finder_nb.ipynb  visual_generator.py  visual_generator.py.ipynb  visual_generator_nb.py  web_news_seacher.py  web_news_searcher.py.ipynb  web_news_searcher_nb.py
src/utils/: general_helpers.py  srag_report_template.html
tests/: main_test.py
